--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,98 @@
 // Specific CSS for your home-page
+h2{
+  margin: 0 0 10px 0;
+}
+
+h3{
+  text-align: center;
+  background-color: #79CFC3;
+  color: white;
+  padding: 15px;
+  margin: 0 0 10px 0;
+}
+
+
+p{
+  color: #7b7b7b; //light-grey
+}
+
+.container{
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #f5f5f5;
+}
+
+//color_list
+.color-preview {
+  border: 1px solid #CCC;
+  margin: 2px;
+  vertical-align: top;
+  float: left;
+  cursor: pointer;
+  overflow: hidden;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+.color-preview.color-selected{
+  border: 3px solid #4eb974;
+}
+
+//app
+.button-custom{
+  border: 1px solid #7b7b7b; //light-grey
+  color: #7b7b7b;
+  padding: 5px;
+  min-width: 135px;
+  width: 33%;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.19);
+  margin: 15px 0px;
+}
+
+.rectangle-customize{
+  width: 100%;
+  min-height: 314px; //image-title
+  z-index: 1;
+  background-color: white;
+  border: 1px solid;
+  display: none;
+  overflow: hidden;
+}
+
+.show_menu{
+  display: block;
+}
+
+.img_design img{
+  position: relative;
+}
+
+.bottom-menu-image {
+  position: absolute;
+  width: 500px; //tshirt -2 px for the border
+  height: 40px;
+  background-color: #0000007a;
+  bottom: 0px;
+  z-index: 1;
+}
+
+.bottom-menu-image .icon-trash {
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
+  font-size: 20px;
+  color: white;
+}
+
+//Add text
+.container-add-text{
+  margin: 0 50px;
+}
+
+.icon-text-style{
+  margin: 5px 10px;
+  height: 30px;
+  width: 30px;
+  padding: 5px;
+}
