--- a/app/assets/stylesheets/pages/_style.scss
+++ b/app/assets/stylesheets/pages/_style.scss
@@ -40,6 +40,10 @@
   right: 50px;
 }
 
+.moveable-rotation .moveable-rotation-control {
+  cursor: grab !important;
+}
+
 .moveable img{
   position: relative;
 }
